feat: adds security deletion
